--- a/src/main/resources/static/stylesheets/spree/spree_admin.scss
+++ b/src/main/resources/static/stylesheets/spree/spree_admin.scss
@@ -1,7 +1,7 @@
 @import 'global/variables';
 
-@import 'bootstrap-sprockets';
-@import 'bootstrap';
+@import '../bootstrap-sprockets';
+@import '../bootstrap';
 
 @import 'components/sidebar';
 @import 'components/tables';
