--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -13,11 +13,6 @@
 	</title>
 
 	<link rel="stylesheet" media="all" href="/stylesheets/sunmall.css?body=1" />
-	<link rel="stylesheet" media="all" href="/assets/select2.self-8265e1600ca21aadde0799ce75d243e6ecc942b48844381acf226475a4022f07.css?body=1" />
-	<link rel="stylesheet" media="all" href="/assets/animate.self-8ff8682dec340d8caa1ea038dc8c9eba39aa9c6f29ed0f712f2ae3f3208cd102.css?body=1" />
-	<link rel="stylesheet" media="all" href="/assets/spree/backend/spree_admin.self-95567f872eeb668c91977af1ef5f67ac338514d2539a6e6fe603cc8dd7aed139.css?body=1" />
-	<link rel="stylesheet" media="all" href="/assets/spree/backend.self-4984d37b1be7d78543cf464fae996bcd8e0e8a72c929b2ded5fde626869184f7.css?body=1" />
-	<link rel="stylesheet" media="all" href="/assets/spree/backend/all.self-33fc4a513acb9a5f3fd4ba26b89c94184e5d028c4bd40eee6736d3ccfea5c140.css?body=1" />
 
 	<script>
 	  SpreePaths = {"mounted_at":"/","admin":"admin/"}
@@ -26,77 +21,79 @@
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
   crossorigin="anonymous"></script>
 
-	<script src="/assets/jquery_ujs.self-784a997f6726036b1993eb2217c9cb558e1cbb801c6da88105588c56f13b466a.js?body=1"></script>
-	<script src="/assets/modernizr.self-aa667fe1e48758a4ad89f17070516b116927175d5010992a9a00b2e4ee2660ba.js?body=1"></script>
-	<script src="/assets/bootstrap/transition.self-6ad2488465135ab731a045a8ebbe3ea2fc501aed286042496eda1664fdd07ba9.js?body=1"></script>
-	<script src="/assets/bootstrap/alert.self-742145c5bb847aafdadc6e339be795628f8bc25f177e851f03a8c42278eb0312.js?body=1"></script>
-	<script src="/assets/bootstrap/button.self-126ac9bf0e7f2d8568f8da3a00fd5f0fac6eae0946331003370161fbf8d7975e.js?body=1"></script>
-	<script src="/assets/bootstrap/carousel.self-e47323f363ceb3dc0bdbce05e36e709ed428e339833a41140a85cb0af24b8127.js?body=1"></script>
-	<script src="/assets/bootstrap/collapse.self-2eb697f62b587bb786ff940d82dd4be88cdeeaf13ca128e3da3850c5fcaec301.js?body=1"></script>
-	<script src="/assets/bootstrap/dropdown.self-561cca1cbaf67474e01e9536f106bad541594860a6df997004591c1c1957a147.js?body=1"></script>
-	<script src="/assets/bootstrap/modal.self-3e78617ade5663314b7ee0ea10375a5b34d59ffbade44939e3f2a4e4ef2019b3.js?body=1"></script>
-	<script src="/assets/bootstrap/tab.self-5bf7078b682f8b131332eefa46b45fa5eff2eca745fc0d03e2991450888f7c28.js?body=1"></script>
-	<script src="/assets/bootstrap/affix.self-6d6f1a7fc5c8aabf3547fa1b794fab6268f54bc55ad815e55873c71f52513517.js?body=1"></script>
-	<script src="/assets/bootstrap/scrollspy.self-969f3c5f48cdf1e439c7fa1154c13b948715f5c689f87837c0b64521d3b46ef6.js?body=1"></script>
-	<script src="/assets/bootstrap/tooltip.self-05afb177e08f98997ccfc84fa08a215e4b27d48d5fe4d049080675e9dffd8199.js?body=1"></script>
-	<script src="/assets/bootstrap/popover.self-0aa93860b59fe7393f1dd490f54b3cb994f9d6155adffce034d4e14ae361b041.js?body=1"></script>
-	<script src="/assets/bootstrap-sprockets.self-fbfa5ad7d9aa0afe439ec4ff3883acc4cb92b62cb67c40d674320c9aa1d4642d.js?body=1"></script>
-	<script src="/assets/handlebars.self-aac45a7b84512bec67b3b900f5a7e63b3f45f01aa58c4ae53bd03b8a80df6471.js?body=1"></script>
-	<script src="/assets/jquery.cookie.self-34ad284f5ab8d65d7e5a54895beb1f4ce427d6ed0f3df83d59533b23520bd206.js?body=1"></script>
-	<script src="/assets/jquery.jstree/jquery.jstree.self-4133052a7f69ba15d0e4f85db43d4dc0ff19499b5fc5e512d704ce4b3e92f07b.js?body=1"></script>
-	<script src="/assets/jquery-ui/core.self-93be4d22eda916787802a64d8f88b52db8a9027d4ccbbc0942625324a7d12d44.js?body=1"></script>
-	<script src="/assets/jquery-ui/datepicker.self-6267be6d4d0f0e8665be3b4d6ac07f40ba23a32aff8eaa5d1bfc00f76a9eeae7.js?body=1"></script>
-	<script src="/assets/jquery-ui/widget.self-c1602241ddc51216b58391768667068867b8e15b9efc722befcd25771eda6819.js?body=1"></script>
-	<script src="/assets/jquery-ui/mouse.self-c513294e8da73f31f84ba3ef11e2a1180a47faea0eb2fea4a53fc26153dd21fd.js?body=1"></script>
-	<script src="/assets/jquery-ui/sortable.self-df2d80a36f9dfbe0facc596ccd92af83ca50d38e4cd6a84810aaf5d40b8cd181.js?body=1"></script>
-	<script src="/assets/jquery-ui/position.self-e693ced4ecfa1a276f0b794f32c1d30d792764b08788bf68ecfa3b388c291333.js?body=1"></script>
-	<script src="/assets/jquery-ui/menu.self-7abc1c9401509a7e4fc609b1e461be6fd17e8116e8fda19cc59d05ba79aefb68.js?body=1"></script>
-	<script src="/assets/jquery-ui/autocomplete.self-3befc48aba87cead090cfd014562b2771a662ac6d2c8197b24c08b2d9f3d9f2d.js?body=1"></script>
-	<script src="/assets/select2.self-3b8f3d27d1d4f2a9c4aecae89a981946329466fe7ed02d61cbc8e77a77ff4516.js?body=1"></script>
-	<script src="/assets/underscore-min.self-efadcb9a8010ea2d2c83f0dadc134a5dc36bf500b116a1b5c347fb7e70e36c6c.js?body=1"></script>
-	<script src="/assets/velocity.self-5fa69922a967f61c0bbe31d68698af4e9a1205a7862f078150a58f46cbb99b45.js?body=1"></script>
-	<script src="/assets/jsuri.self-090126b483ac28538a8bd132dce89500493c079744010067a5e79b94f57c0122.js?body=1"></script>
-	<script src="/assets/spree.self-77584b42ec80fc02086ac4b655219d17518c002660a93e6d91bd743a8e57949a.js?body=1"></script>
-	<script src="/assets/spree/backend/spree-select2.self-551d240b0267347a3fe1d31080b841be420fe24a588b8421bf59fc21be0ce3ef.js?body=1"></script>
-	<script src="/assets/spree/backend/address_states.self-b1e1f0afd855bedef5faecce0a6510759c1f4d12b7ea1093104cafb885ac45b2.js?body=1"></script>
-	<script src="/assets/spree/backend/adjustments.self-0193a8ae551d294944e990b5cbcaeac5586d57c3f458cdcaafa50bdcddc08a9d.js?body=1"></script>
-	<script src="/assets/spree/backend/admin.self-fede2457b83e2d9742725d72f9eca7c0ada63beb8383b9d8f8830010b72a85bb.js?body=1"></script>
-	<script src="/assets/spree/backend/calculator.self-d316b5a2aab2474aeb2511fab6598ae43daa42e10c06bd4c89ad84cc6c72acc2.js?body=1"></script>
-	<script src="/assets/spree/backend/checkouts/edit.self-91b277f7895040c09275a666520628b02702865f5f3c8a3f8bd00a1ac5aac44c.js?body=1"></script>
-	<script src="/assets/spree/backend/gateway.self-f0b06fafd8214af75350b4ecb87cd64d4b1e2906e2cd143b6a323e7d77db5afc.js?body=1"></script>
-	<script src="/assets/spree/backend/general_settings.self-12aaf193c584799558713dfd457a6002060e3ad092d193794bbbf1dd256ccaf8.js?body=1"></script>
-	<script src="/assets/spree/backend/handlebar_extensions.self-b2e3f13f8bbc6f2c5b8ec67aca2414e784ce373f2ad3e437d239291f65fc49bc.js?body=1"></script>
-	<script src="/assets/spree/backend/line_items.self-a39aadea9d28130c34dabc9621e8f407b22a085e72218df462d2d111ef9be96b.js?body=1"></script>
-	<script src="/assets/spree/backend/line_items_on_order_edit.self-2e09450c4e65a9db12f99864aceb2035e67c4f6dfa22ca4eeadfe1b35dac1424.js?body=1"></script>
-	<script src="/assets/spree/backend/option_type_autocomplete.self-b9f2239af1fa77c04bf0168c0f767e817d58c8f04b5f74b456e3157d752cd1f9.js?body=1"></script>
-	<script src="/assets/spree/backend/option_value_picker.self-dfb0d92526a69467a597e1850e88d39c5bddb527732f3210a6998dcae5b701ee.js?body=1"></script>
-	<script src="/assets/spree/backend/orders/edit.self-d7af5a0748a6fe9cd7f6a68c78f896687b63e4702aca11bbd57ce830773b4ebc.js?body=1"></script>
-	<script src="/assets/spree/backend/payments/edit.self-e2d0f27c92f1db70305c3d3733663e5115982cab23f589ab7fd18194f854ee03.js?body=1"></script>
-	<script src="/assets/jquery.payment.self-38d1c43bb5a79a62bce3ec642fe216db420582062f0990bb7ce095fe9698a834.js?body=1"></script>
-	<script src="/assets/spree/backend/payments/new.self-9c9785c8204d067b3c7bb53e83c471aab5093107807d5d8dcb4b90d2f33b4aca.js?body=1"></script>
-	<script src="/assets/spree/backend/product_picker.self-0d0390f26d960ffe57311bef3eaa65efb73610fcb6f253dcb9e15a1c30e22bb9.js?body=1"></script>
-	<script src="/assets/spree/backend/progress.self-dc7faaec6730338ef5d39e3163452d73f963a18287508c8f168079f79e696f39.js?body=1"></script>
-	<script src="/assets/spree/backend/promotions.self-59a350a124de8a4758c7973df62c0e8c922ff61758aaf4c7d9063f9b0b005703.js?body=1"></script>
-	<script src="/assets/spree/backend/returns/expedited_exchanges_warning.self-4c028664459e8747b1e16af98cb3d2bfc64c768d4ae9e01be76a8e3cf609d87c.js?body=1"></script>
-	<script src="/assets/spree/backend/returns/return_item_selection.self-ba25a0050690c95bf50f28502b8803f5f3e6932710f84cff57e4bb86789bba0c.js?body=1"></script>
-	<script src="/assets/spree/backend/shipments.self-aad5900fb508ec2854106ac3093a62ae0a536cc514472c6ba45d5d0150a51673.js?body=1"></script>
-	<script src="/assets/spree/backend/states.self-9da25c2d735bb114f6e2ee6015db8571dfd2a97fea877fc612cae23775591ca0.js?body=1"></script>
-	<script src="/assets/spree/backend/stock_location.self-7063eb91515d8ca91fc15db5b8d9df4e45f09d32e6fef23a212fae036202d086.js?body=1"></script>
-	<script src="/assets/spree/backend/stock_management.self-79a47da79d46d6255de87ebea8d507bdef86647955e13d96cb5a3641c3112470.js?body=1"></script>
-	<script src="/assets/spree/backend/stock_movement.self-f24d971ae273524ea93e5231a6b872b6a9eafe64fb195a66acaa79223bd139dc.js?body=1"></script>
-	<script src="/assets/spree/backend/stock_transfer.self-1d25178386588cf777597140b04954df76af2f1667d5655c58c40b710f6b333f.js?body=1"></script>
-	<script src="/assets/spree/backend/taxon_autocomplete.self-bedd7724fbafc160ca7df46539f5c0d064eb6584adb35074820f4393be0e1c55.js?body=1"></script>
-	<script src="/assets/spree/backend/taxon_permalink_preview.self-b8c74a37797f45a125c2493e5807bbd422aa5e9dd36c093f595d338c2d88ef08.js?body=1"></script>
-	<script src="/assets/spree/backend/taxon_tree_menu.self-3aff0ecfd9eb4c6c58814e27117076d3891d34a5c9ea51ef8401321a2ab3e507.js?body=1"></script>
-	<script src="/assets/spree/backend/taxonomy.self-e2ef8c68b3c7a8877decf2d2bebc62bb27099319080a58c7f47109dbbd984e86.js?body=1"></script>
-	<script src="/assets/spree/backend/taxons.self-a52519dfec12cb08003c6e02f78472d6296e7410c8fa70c44debab238dd73e68.js?body=1"></script>
-	<script src="/assets/spree/backend/user_picker.self-b3c3e41ddc60e6b6e90f96ffffbfde624f9fe7921c861dd9a5faefa77c069553.js?body=1"></script>
-	<script src="/assets/spree/backend/tag_picker.self-c553f1ee4c9e2c15d330886c3ab7223aff77d1d12d7f6e88aece636423e07960.js?body=1"></script>
-	<script src="/assets/spree/backend/variant_autocomplete.self-bc2e7954d75e66ecb0d582a54290008f9e5938aecf01dc0a2ff11595fe325c6c.js?body=1"></script>
-	<script src="/assets/spree/backend/variant_management.self-a6fed3bbdbe69ad3465c5a133d80b49e3860039b43ef6644ff430c9604a2b1b7.js?body=1"></script>
-	<script src="/assets/spree/backend/zone.self-d50ab9c1b3fcacc876540a8afccd24c64aa947aef5156959919a804212bafa22.js?body=1"></script>
-	<script src="/assets/spree/backend.self-73adfece2f765aa9d87facf71b20c9182c7ee38c03c434e4c5628d77461017a1.js?body=1"></script>
-	<script src="/assets/spree/backend/all.self-705575bc483598bd0d9c3be0db390d8ca6e05bda2687beaa2e080cbc592b3f0c.js?body=1"></script>
+	<script src="/javascripts/jquery_ujs.js?body=1"></script>
+	<script src="/javascripts/modernizr.js?body=1"></script>
+	<script src="/javascripts/bootstrap/transition.js?body=1"></script>
+	<script src="/javascripts/bootstrap/alert.js?body=1"></script>
+	<script src="/javascripts/bootstrap/button.js?body=1"></script>
+	<script src="/javascripts/bootstrap/carousel.js?body=1"></script>
+	<script src="/javascripts/bootstrap/collapse.js?body=1"></script>
+	<script src="/javascripts/bootstrap/dropdown.js?body=1"></script>
+	<script src="/javascripts/bootstrap/modal.js?body=1"></script>
+	<script src="/javascripts/bootstrap/tab.js?body=1"></script>
+	<script src="/javascripts/bootstrap/affix.js?body=1"></script>
+	<script src="/javascripts/bootstrap/scrollspy.js?body=1"></script>
+	<script src="/javascripts/bootstrap/tooltip.js?body=1"></script>
+	<script src="/javascripts/bootstrap/popover.js?body=1"></script>
+	<script src="/javascripts/bootstrap-sprockets.js?body=1"></script>
+	<script src="/javascripts/handlebars.js?body=1"></script>
+	<script src="/javascripts/jquery.cookie.js?body=1"></script>
+	<script src="/javascripts/jquery.jstree/jquery.jstree.js?body=1"></script>
+
+	<script src="/javascripts/jquery-ui.core.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.datepicker.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.widget.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.mouse.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.sortable.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.position.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.menu.js?body=1"></script>
+	<script src="/javascripts/jquery-ui.autocomplete.js?body=1"></script>
+	
+	<script src="/javascripts/select2.js?body=1"></script>
+	<script src="/javascripts/underscore-min.js?body=1"></script>
+	<script src="/javascripts/velocity.js?body=1"></script>
+	<script src="/javascripts/jsuri.js?body=1"></script>
+	<script src="/javascripts/sunmall.js?body=1"></script>
+	<script src="/javascripts/spree/spree-select2.js?body=1"></script>
+	<script src="/javascripts/spree/address_states.js?body=1"></script>
+	<script src="/javascripts/spree/adjustments.js?body=1"></script>
+	<script src="/javascripts/spree/admin.js?body=1"></script>
+	<script src="/javascripts/spree/calculator.js?body=1"></script>
+	<script src="/javascripts/spree/checkouts/edit.js?body=1"></script>
+	<script src="/javascripts/spree/gateway.js?body=1"></script>
+	<script src="/javascripts/spree/general_settings.js?body=1"></script>
+	<script src="/javascripts/spree/handlebar_extensions.js?body=1"></script>
+	<script src="/javascripts/spree/line_items.js?body=1"></script>
+	<script src="/javascripts/spree/line_items_on_order_edit.js?body=1"></script>
+	<script src="/javascripts/spree/option_type_autocomplete.js?body=1"></script>
+	<script src="/javascripts/spree/option_value_picker.js?body=1"></script>
+	<script src="/javascripts/spree/orders/edit.js?body=1"></script>
+	<script src="/javascripts/spree/payments/edit.js?body=1"></script>
+	<script src="/javascripts/jquery.payment.js?body=1"></script>
+	<script src="/javascripts/spree/payments/new.js?body=1"></script>
+	<script src="/javascripts/spree/product_picker.js?body=1"></script>
+	<script src="/javascripts/spree/progress.js?body=1"></script>
+	<script src="/javascripts/spree/promotions.js?body=1"></script>
+	<script src="/javascripts/spree/returns/expedited_exchanges_warning.js?body=1"></script>
+	<script src="/javascripts/spree/returns/return_item_selection.js?body=1"></script>
+	<script src="/javascripts/spree/shipments.js?body=1"></script>
+	<script src="/javascripts/spree/states.js?body=1"></script>
+	<script src="/javascripts/spree/stock_location.js?body=1"></script>
+	<script src="/javascripts/spree/stock_management.js?body=1"></script>
+	<script src="/javascripts/spree/stock_movement.js?body=1"></script>
+	<script src="/javascripts/spree/stock_transfer.js?body=1"></script>
+	<script src="/javascripts/spree/taxon_autocomplete.js?body=1"></script>
+	<script src="/javascripts/spree/taxon_permalink_preview.js?body=1"></script>
+	<script src="/javascripts/spree/taxon_tree_menu.js?body=1"></script>
+	<script src="/javascripts/spree/taxonomy.js?body=1"></script>
+	<script src="/javascripts/spree/taxons.js?body=1"></script>
+	<script src="/javascripts/spree/user_picker.js?body=1"></script>
+	<script src="/javascripts/spree/tag_picker.js?body=1"></script>
+	<script src="/javascripts/spree/variant_autocomplete.js?body=1"></script>
+	<script src="/javascripts/spree/variant_management.js?body=1"></script>
+	<script src="/javascripts/spree/zone.js?body=1"></script>
+	<script src="/javascripts/spree/backend.js?body=1"></script>
+	<script src="/javascripts/spree/all.js?body=1"></script>
 	<script>
 	  Spree.translations = {"abbr_day_names":["Sun","Mon","Tue","Wed","Thu","Fri","Sat"],"add":"Add","are_you_sure_delete":"Are you sure you want to delete this record?","bill_address":"Bill Address","cancel":"Cancel","choose_a_customer":"Choose a customer","confirm_delete":"Confirm Deletion","currency_separator":".","cut":"Cut","date_picker":"yy/mm/dd","destroy":"Destroy","edit":"Edit","first_day":0,"find_a_taxon":"Find a Taxon","item_stock_placeholder":"Choose location","loading":"Loading","month_names":["January","February","March","April","May","June","July","August","September","October","November","December"],"more":"More","name":"Name","new_taxon":"New Taxon","next":"Next","no_results":"No results","option_type_placeholder":"Choose an option type","paste":"Paste","previous":"Previous","remove":"Remove","rename":"Rename","save":"Save","searching":"Searching","server_error":"The server returned an error","sku":"SKU","type_to_search":"Type to search","taxon_placeholder":"Add a Taxon","taxonomy_tree_error":"The requested change has not been accepted and the tree has been returned to its previous state, please try again.","tags_placeholder":"Add Tags","tracking":"Tracking","variant_placeholder":"Choose a variant","value":"Value"}
 	</script>
