--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -6,7 +6,7 @@
 		<!-- Insert content into the layouts/layout.html -->
 		<th:block layout:fragment="content">
 			<div>
-				hhhhhhhhhhhhhhhhhhhhhh/fdasfafasf
+				i'm home page!
 			</div>
 		</th:block>
 	</body>
