--- a/src/main/resources/templates/fragments/content_header.html
+++ b/src/main/resources/templates/fragments/content_header.html
@@ -1,14 +1,13 @@
-            <div class="content-header  page-header"  th:fragment="content_header">
+<div class="content-header  page-header"  th:fragment="content_header">
     <div class="row">
         <h1 class="col-sm-6">
             Orders
-
         </h1>
-
         <div class="page-actions col-sm-6" data-hook="toolbar">
-            <a class="btn btn-success" icon="add" id="admin_new_order" href="http://10.154.30.50:3000/admin/orders/new"><span class="icon icon-add"></span> New Order</a>
-
+            <a class="btn btn-success" icon="add" id="admin_new_order" href="http://10.154.30.50:3000/admin/orders/new">
+                <span class="icon icon-add"></span> New Order
+            </a>
         </div>
 
     </div>
-  </div>
+</div>
